--- a/introduction /css/rwd.css
+++ b/introduction /css/rwd.css
@@ -11,7 +11,7 @@ body {
   display: grid;
   grid-template-areas:
     'header'
-    'tabs'
+    'menu'
     'content'
     'facts'
     'footer';
@@ -30,46 +30,40 @@ body {
   font-size: 40px;
 }
  
-.tab-radio {
-    display: none;
+.menu {
+  grid-area: menu;
+  }
+ 
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+ 
+.menu li {
+  padding: 8px;
+  margin-bottom: 7px;
+  background-color: #2C69D5;
+  color: #ffffff;
+}
+ 
+.menu li:hover {
+  background-color: #2C69D5;
 }
 
-.tab-label {
-    grid-area: tabs; 
-    
-    padding: 8px;
-    margin-bottom: 7px;
-    background-color: #2C69D5;
-    color: #ffffff;
-    cursor: pointer;
-    transition: background-color 0.2s;
-    display: block; 
+.content {
+  grid-area: content;
+  display: block;
+  padding: 0;
 }
-
-.tab-radio:checked + .tab-label {
-    background-color: #0045A8;
-    font-weight: bold;
+ 
+.content > h1 {
+  font-size: 30px;
+  margin-bottom: 7px;
 }
-
-.tab-label:hover {
-    background-color: #4A89F5;
-}
-
-.tab-radio:checked + .tab-label:hover {
-    background-color: #0045A8;
-}
-
-.tab-content {
-    grid-area: content; 
-    display: none;
-    padding: 10px;
-}
-
-#tab1:checked ~ #content1,
-#tab2:checked ~ #content2,
-#tab3:checked ~ #content3,
-#tab4:checked ~ #content4 {
-    display: block;
+ 
+.content > p {
+  margin-bottom: 7px;
 }
 
 .facts {
@@ -93,42 +87,21 @@ body {
   color: #ffffff;
   text-align: center;
 }
-
-.tab-label {
-    margin-right: 0;
+ 
+@media (min-width: 600px) {
+  .header {grid-area: 1 / span 6;}
+  .menu {grid-area: 2 / span 1;}
+  .content {grid-area: 2 / span 4;}
+  .facts {grid-area: 3 / span 6;}
+  .footer {grid-area: 4 / span 6;}
 }
-
+ 
 @media (min-width: 768px) {
-    .grid-container {
-        grid-template-areas:
-            'header header header header header header'
-            'tabs content content content facts facts'
-            'footer footer footer footer footer footer';
-        grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr;
-    }
-
-    .header {grid-area: header;}
-
-    .tab-label {
-        grid-area: unset; 
-        grid-column: 1 / 2;
-        display: block; 
-        margin-right: 0;
-    }
-
-    .tab-content {
-        grid-area: unset; 
-        grid-column: 2 / 5;
-        grid-row: 2 / 3;
-        border-left: 1px solid #ccc;
-        padding-left: 20px;
-    }
-
-    .facts {
-        grid-area: facts;
-        grid-column: 5 / 7;
-        grid-row: 2 / 3;
-    }
-
-    .footer {grid-area: footer;}
+  .header {grid-area: 1 / span 6;}
+  .menu {grid-area: 2 / span 1;}
+  .content {grid-area: 2 / span 4;}
+  .facts {grid-area: 2 / span 1;
+          grid-column: 5 / 7;
+          grid-row: 2 / 3;}
+  .footer {grid-area: 3 / span 6;}
 }
